force-app/main/default/objects/Deployment_frequency__c/Deployment_frequency__c.object-meta.xml
<CustomObject>
    <label>Deployment frequency</label>
    <nameField>
        <label>Deployment frequency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment frequency</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>