force-app/main/default/objects/Deployment_frequency__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deployment frequency</relationshipLabel>
    <relationshipName>Deployment_frequency</relationshipName>
    <type>Lookup</type>
</CustomField>