force-app/main/default/objects/Deployment_frequency__c/fields/RelatedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>RelatedOpportunity__c</fullName>
    <label>RelatedOpportunity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>